<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tenant_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.shadow.rentalapp.ui.fragments.HomeFragment"
        android:label="@string/home_text"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.shadow.rentalapp.ui.fragments.messages.MessagesFragment"
        android:label="@string/messages_text"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.shadow.rentalapp.ui.fragments.payments.PaymentFragment"
        android:label="@string/payments_text"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.shadow.rentalapp.ui.fragments.notifications.NotificationsFragment"
        android:label="@string/notifications_text"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.shadow.rentalapp.ui.fragments.profiles.ProfileFragment"
        android:label="@string/profile_text"
        tools:layout="@layout/profile_fragment">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.shadow.rentalapp.ui.fragments.profiles.EditProfileFragment"
        android:label="@string/edit_text"
        tools:layout="@layout/fragment_edit_profile" />
</navigation>