<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SplashActivity">

    <ImageView
        android:id="@+id/logo_image_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/logo"
        android:transitionName="logo_image"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:id="@+id/welcome_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/bangers"
        android:text="@string/azones_rental_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="?colorAccent"
        android:textSize="48sp"
        android:textStyle="bold"
        android:transitionName="logo_name" />

    <TextView
        android:id="@+id/slogan_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bangers"
        android:text="@string/slogan_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="italic" />

</LinearLayout>